# NPuzzle

./: CMakeLists.txt  build.sh
include/: Gui.hpp  NPuzzle.hpp  Node.hpp
resources/: t.txt  taa.txt  taqu.txt  taquin1.txt  taquin2.txt  taquinnew.txt
src/: Gui.cpp  NPuzzle.cpp  NPuzzleApp.cpp  Node.cpp
